@@ -22,10 +22,14 @@ Version 1.3.9+svn:
     * Updated translations: Czech, Danish, Finnish, French, Galician, Greek,
       Hungarian, Italian, Polish, Swedish, Valencian.
 
+  * map editor:
+    * Fixed a bug, when two dimensions of a map were modified, the editor 
+      could crash.
+
   * Multiplayer
     * Revised maps: Silverhead Crossing, Weldyn Channel, Blue Water Province.
 
-  * Uunits:
+  * Units:
     * Necromancer can now be female when advanced from Dark Sorceress
 
   * User interface
